--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,8 @@ jobs:
           java-version: "21"
           cache: "gradle"
 
+      - name: Make gradlew executable again
+        run: chmod +x gradlew
+
       - name: Run unit tests
         run: ./gradlew test
