--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
